// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`verdict spread > matches the committed snapshot (cramped) 1`] = `
{
  "case": {
    "blocked": 8,
    "ok": 51,
    "unverified": 0,
  },
  "cooler": {
    "blocked": 10,
    "ok": 21,
    "unverified": 22,
  },
  "cpu": {
    "blocked": 54,
    "ok": 26,
    "unverified": 0,
  },
  "fans": {
    "blocked": 0,
    "ok": 46,
    "unverified": 0,
  },
  "gpu": {
    "blocked": 0,
    "ok": 79,
    "unverified": 0,
  },
  "motherboard": {
    "blocked": 57,
    "ok": 10,
    "unverified": 3,
  },
  "paste": {
    "blocked": 0,
    "ok": 15,
    "unverified": 0,
  },
  "psu": {
    "blocked": 0,
    "ok": 53,
    "unverified": 0,
  },
  "ram": {
    "blocked": 17,
    "ok": 35,
    "unverified": 0,
  },
  "storage": {
    "blocked": 0,
    "ok": 52,
    "unverified": 0,
  },
}
`;

exports[`verdict spread > matches the committed snapshot (roomy) 1`] = `
{
  "case": {
    "blocked": 14,
    "ok": 45,
    "unverified": 0,
  },
  "cooler": {
    "blocked": 0,
    "ok": 31,
    "unverified": 22,
  },
  "cpu": {
    "blocked": 54,
    "ok": 26,
    "unverified": 0,
  },
  "fans": {
    "blocked": 0,
    "ok": 46,
    "unverified": 0,
  },
  "gpu": {
    "blocked": 0,
    "ok": 79,
    "unverified": 0,
  },
  "motherboard": {
    "blocked": 37,
    "ok": 28,
    "unverified": 5,
  },
  "paste": {
    "blocked": 0,
    "ok": 15,
    "unverified": 0,
  },
  "psu": {
    "blocked": 0,
    "ok": 53,
    "unverified": 0,
  },
  "ram": {
    "blocked": 17,
    "ok": 35,
    "unverified": 0,
  },
  "storage": {
    "blocked": 0,
    "ok": 52,
    "unverified": 0,
  },
}
`;
